--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "mean-api",
-  "version": "0.1.0",
-  "private": true,
+  "name": "api",
+  "version": "1.0.0",
+  "description": "server inn Ts using expresJs, nodeJs",
+  "main": "index.js",
+  "scripts": {
+    "dev": "ts-node ./lib/index.ts",
+    "build": "tsc"
+  },
+  "keywords": [
+    "sever",
+    "Ts",
+    "ExpressJs",
+    "NodeJs"
+  ],
+  "author": "Filip Kielbasa",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "1.20.1",
     "express": "4.18.2",
@@ -19,11 +32,5 @@
     "node-gyp": "^6.1.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.3"
-  },
-  "scripts": {
-    "dev": "ts-node ./lib/index.ts",
-    "build": "tsc"
-   }
-   
- }
- 
+  }
+}
