--- a/api/package.json
+++ b/api/package.json
@@ -27,7 +27,8 @@
     "joi": "17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.2.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "1.9.3",
     "@types/node": "^14.18.33",
+    "@types/nodemailer": "^6.4.14",
     "node-gyp": "^6.1.0",
     "nodemon": "^3.1.0",
     "ts-node": "10.9.1",
